Re-factor RestOAuthTestIT as Quarkus/rest-assured tests